<resources>
    <string name="about">About</string>
    <string name="about_author">Author: W4J1e</string>
    <string name="add_images">Add images</string>
    <string name="add_checkbox">Add checkbox</string>
    <string name="add_item">Add Item</string>
    <string name="add_label">Add label</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="adding_files">Adding files</string>
    <string name="adding_images">Adding images</string>
    <string name="all">All</string>
    <string name="always_show_search_bar">Always show search bar expanded</string>
    <string name="always_show_search_bar_hint">By enabling this, the search bar will always be shown in the layout instead of using a search icon in the top bar</string>
    <string name="app_name" translatable="false">memoX</string>
    <string name="appearance">Appearance</string>
    <string name="archive">Archive</string>
    <string name="archived">Archived</string>
    <plurals name="archived_selected_notes">
        <item quantity="one">Archived %1$d note</item>
        <item quantity="other">Archived %1$d notes</item>
    </plurals>
    <string name="ascending">Ascending</string>
    <string name="attach_file">Attach file</string>
    <plurals name="attachments">
        <item quantity="one">Attachment</item>
        <item quantity="other">Attachments</item>
    </plurals>
    <string name="audio_recordings">Audio Recordings</string>
    <string name="auto_backup">Auto Backups</string>
    <string name="auto_backup_error_message">An error occurred during auto backup:\n\'%1$s\'\nPlease check your settings or report a bug</string>
    <string name="auto_backup_failed">memoX Auto Backup failed</string>
    <string name="auto_backup_last">Last Backup</string>
    <string name="auto_backup_on_save">Backup on exit Note automatically</string>
    <string name="auto_backup_on_save_hint">By enabling this, a backup (\"MemoX_AutoBackup.zip\") is automatically created in the configured \"Backups Folder\" whenever a note is exited.\nBe aware this might affect performance</string>
    <string name="auto_backup_skipped_files">Skipped %1$d missing attached files/images</string>
    <string name="auto_backups_folder">Backups Folder</string>
    <string name="auto_backups_folder_hint">Folder in which all auto backups will be stored in.\nIf you want to use Cloud-Storage/WebDAV for your backups, please read the docs (click \"%1$s\")</string>
    <string name="auto_backups_folder_rechoose">You need to re-choose your Backups Folder so that memoX has permission to write to it.\nYou can also press cancel to skip importing Backups Folder value</string>
    <string name="auto_backups_folder_set">Set up a Backups Folder above first</string>
    <string name="auto_remove_deleted_notes">Auto remove deleted Notes permanently after</string>
    <string name="auto_remove_deleted_notes_hint">By enabling this, Notes that were deleted will be permanently removed after X days</string>
    <string name="auto_save_after_idle_time">Auto save note after specified idle time</string>
    <string name="auto_sort_by_checked">Sort checked items to the end</string>
    <string name="auto_sort_by_checked_timestamp">Sort checked items by checked time</string>
    <string name="back">Back</string>
    <string name="backup">Backup</string>
    <string name="backup_password">Backup Password</string>
    <string name="backup_password_hint">By setting this, all future backup ZIPs will be encrypted and password-protected</string>
    <string name="backup_period_days">Auto backup period in days</string>
    <string name="backup_periodic">Periodic Backups</string>
    <string name="webdav_sync">WebDAV Sync</string>
    <string name="webdav_url">WebDAV URL</string>
    <string name="webdav_url_hint">https://dav.jianguoyun.com/dav/</string>
    <string name="webdav_username">Username</string>
    <string name="webdav_password">Password</string>
    <string name="webdav_sync_enabled">Enable WebDAV Sync</string>
    <string name="webdav_auto_sync">Auto Sync</string>
    <string name="webdav_auto_sync_hint">Automatically sync when notes are modified</string>
    <string name="webdav_test_connection">Test Connection</string>
    <string name="webdav_sync_now">Sync Now</string>
    <string name="webdav_upload">Upload to WebDAV</string>
    <string name="webdav_download">Download from WebDAV</string>
    <string name="webdav_last_sync">Last sync: %1$s</string>
    <string name="webdav_last_sync_never">Never synced</string>
    <string name="webdav_connecting">Connecting…</string>
    <string name="webdav_uploading">Uploading…</string>
    <string name="webdav_downloading">Downloading…</string>
    <string name="webdav_syncing">Syncing…</string>
    <string name="webdav_success">Sync successful</string>
    <string name="webdav_error">Sync failed: %1$s</string>
    <string name="webdav_not_configured">WebDAV not configured</string>
    <string name="webdav_import_confirm">This will download the backup from WebDAV and import it into the app. Existing notes with the same ID will be skipped as duplicates. Continue?</string>
    <string name="onedrive_sync">OneDrive Sync</string>
    <string name="onedrive_sign_in">Sign in with Microsoft</string>
    <string name="onedrive_signed_in_as">Signed in as %1$s</string>
    <string name="onedrive_not_signed_in">Not signed in</string>
    <string name="onedrive_sync_enabled">Enable OneDrive Sync</string>
    <string name="onedrive_auto_sync">Auto Sync</string>
    <string name="onedrive_auto_sync_hint">Automatically sync when notes are modified</string>
    <string name="onedrive_test_connection">Test Connection</string>
    <string name="onedrive_sync_now">Sync Now</string>
    <string name="onedrive_upload">Upload to OneDrive</string>
    <string name="onedrive_download">Download from OneDrive</string>
    <string name="onedrive_last_sync">Last sync: %1$s</string>
    <string name="onedrive_last_sync_never">Never synced</string>
    <string name="onedrive_connecting">Connecting…</string>
    <string name="onedrive_uploading">Uploading…</string>
    <string name="onedrive_downloading">Downloading…</string>
    <string name="onedrive_syncing">Syncing…</string>
    <string name="onedrive_success">Sync successful</string>
    <string name="onedrive_error">Sync failed: %1$s</string>
    <string name="onedrive_sign_out">Sign out</string>
    <string name="onedrive_import_confirm">This will download the backup from OneDrive and import it into the app. Existing notes with the same ID will be skipped as duplicates. Continue?</string>
    <string name="onedrive_auth_failed">Microsoft sign-in failed: %1$s</string>
    <string name="onedrive_provider_conflict">WebDAV sync is enabled. Enable OneDrive will disable WebDAV sync. Continue?</string>
    <string name="webdav_provider_conflict">OneDrive sync is enabled. Enable WebDAV will disable OneDrive sync. Continue?</string>
    <string name="backup_periodic_hint">By enabling this, backups are automatically created in the configured Backups Folder.\nThis may not work if you have power saving mode enabled</string>
    <string name="behaviour">Behaviour</string>
    <string name="biometric_backup_advice">It is advised to export a full backup of all notes before dis-/enabling biometric lock, in case the encryption via biometric lock fails</string>
    <string name="biometric_lock">Lock app with device biometric or PIN</string>
    <string name="biometrics_disable_success">Biometric/PIN lock has been disabled</string>
    <string name="biometrics_failure">Failed to authenticate via Biometric/PIN</string>
    <string name="biometrics_no_support">No biometric features available on this device</string>
    <string name="biometrics_not_setup">Biometrics/PIN are not setup for your device yet</string>
    <string name="biometrics_setup_failure">Failed to setup Biometric/PIN lock</string>
    <string name="biometrics_setup_failure_decrypt">Decryption of the database failed.\nPlease use \'%1$s\' to report the error</string>
    <string name="biometrics_setup_failure_encrypt">Encryption of the database failed.\nPlease use \'%1$s\' to report the error</string>
    <string name="biometrics_setup_success">Biometric/PIN lock has been enabled</string>
    <string name="bold">Bold</string>
    <string name="calculating">Calculating…</string>
    <string name="cancel">Cancel</string>
    <plurals name="cant_add_files">
        <item quantity="one">Can’t add %1$d file</item>
        <item quantity="other">Can’t add %1$d files</item>
    </plurals>
    <plurals name="cant_add_images">
        <item quantity="one">Can’t add %1$d image</item>
        <item quantity="other">Can’t add %1$d images</item>
    </plurals>
    <string name="cant_find_folder">Can’t find folder. It may have been moved or deleted</string>
    <string name="cant_find_note">Can’t find note. It may have been deleted</string>
    <string name="cant_load_file">Can’t load file. It may have been moved or deleted</string>
    <string name="cant_load_image">Can’t load image. It may have been moved or deleted</string>
    <string name="cant_open_link">Can’t open link</string>
    <string name="change_color">Change Color</string>
    <string name="change_color_default_message">The ★ marks the default color for new notes.</string>
    <string name="change_color_message">Pick a color or create a new one.\nYou can also edit a Color by long pressing it.</string>
    <string name="change_note">Change Note</string>
    <string name="check_all_items">Check all items</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="choose_folder">Choose folder</string>
    <string name="choose_other_app">Choose which app to import from</string>
    <string name="clean_up">Clean Up</string>
    <string name="cleanup_finished_summary">Removed %1$d missing attachments from %2$d notes</string>
    <string name="cleanup_finished_title">Cleanup Finished</string>
    <string name="clear">Clear</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_data_message">All Notes, Images, Files, Audios will be permanently deleted</string>
    <string name="clear_formatting">Clear formatting</string>
    <string name="cleared_data">All Data has been cleared</string>
    <string name="color">Color</string>
    <string name="color_exists">This color already exists!</string>
    <string name="content_density">Content density</string>
    <string name="continue_">Continue</string>
    <string name="convert_to_list_note">Convert to List</string>
    <string name="convert_to_text_note">Convert to Text Note</string>
    <string name="copied_link">Copied Link to Clipboard</string>
    <string name="copy">Copy</string>
    <string name="count" translatable="false">%1$d / %2$d</string>
    <string name="crash_export_backup_failed">Unfortunately, exporting the backup failed.\nPlease use the \'%1$s\' button to report the crash</string>
    <string name="crash_export_backup_message">You can try to create a backup of your notes by clicking \'%1$s\'.\nThis might fail if the crash lead to broken/corrupted data. In that case, please use the \'%2$s\' button to report the crash</string>
    <string name="crash_message">An unexpected error occurred.\nSorry for the inconvenience.</string>
    <string name="create_github_issue">Create Github Issue</string>
    <string name="creation_date">Created</string>
    <string name="custom">Custom</string>
    <string name="daily">Daily</string>
    <string name="dark">Dark</string>
    <string name="data">Data</string>
    <string name="deleted">Deleted</string>
    <string name="labels">Labels</string>
    <plurals name="notes">
        <item quantity="one">Note</item>
        <item quantity="other">Notes</item>
    </plurals>
    <string name="reminders">Reminders</string>
    <string name="settings">Settings</string>
    <string name="unlabeled">Unlabeled</string>
</resources>